# lpr-runtime

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMD_SET_REFERENCE.md  CMakeLists.txt  README.md  ROADMAP.md  RUNBOOK.md  TODO.md
cli/: main.cpp
cmake/: FindBoost.cmake
include/lpr/: lpr.h
openspec/: project.md
openspec/changes/add-bootstrap-runtime/: proposal.md  tasks.md
openspec/changes/add-bootstrap-runtime/specs/cli-repl/: spec.md
openspec/changes/add-bootstrap-runtime/specs/context-engine/: spec.md
openspec/changes/add-bootstrap-runtime/specs/filesystem-commands/: spec.md
openspec/changes/add-bootstrap-runtime/specs/parser/: spec.md
openspec/changes/add-bootstrap-runtime/specs/program-execution/: spec.md
openspec/changes/add-bootstrap-runtime/specs/stack-commands/: spec.md
openspec/changes/add-bootstrap-runtime/specs/type-conversion-commands/: spec.md
openspec/changes/add-cas-symengine-bridge/: design.md  proposal.md  tasks.md
openspec/changes/add-cas-symengine-bridge/specs/build-system/: spec.md
openspec/changes/add-cas-symengine-bridge/specs/cas-commands/: spec.md
openspec/changes/add-cas-symengine-bridge/specs/object-types/: spec.md
openspec/changes/add-control-logic-math-strings/: design.md  proposal.md  tasks.md
openspec/changes/add-control-logic-math-strings/specs/c-api/: spec.md
openspec/changes/add-control-logic-math-strings/specs/context-engine/: spec.md
openspec/changes/add-control-logic-math-strings/specs/control-flow/: spec.md
openspec/changes/add-control-logic-math-strings/specs/program-execution/: spec.md
openspec/changes/add-directory-navigation/: tasks.md
openspec/changes/add-directory-navigation/specs/filesystem-commands/: spec.md
openspec/changes/add-expression-eval/: proposal.md  tasks.md
openspec/changes/add-expression-eval/specs/context-engine/: spec.md
openspec/changes/add-expression-eval/specs/parser/: spec.md
openspec/changes/add-lists-and-matrices/: design.md  tasks.md
openspec/changes/add-lists-and-matrices/specs/matrix-commands/: spec.md
openspec/changes/add-lists-and-matrices/specs/object-types/: spec.md
openspec/changes/add-lists-and-matrices/specs/parser/: spec.md
openspec/changes/add-modes-flags-history/: tasks.md
openspec/changes/add-modes-flags-history/specs/c-api/: spec.md
openspec/changes/add-modes-flags-history/specs/cli-repl/: spec.md
openspec/changes/add-symbolic-manipulation/: design.md  proposal.md  tasks.md
openspec/changes/add-symbolic-manipulation/specs/symbolic-manipulation/: spec.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/: design.md  tasks.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/specs/arithmetic-commands/: spec.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/specs/build-system/: spec.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/specs/comparison-commands/: spec.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/specs/object-types/: spec.md
openspec/changes/archive/2026-02-23-add-bootstrap-runtime/specs/sqlite-store/: spec.md
openspec/changes/archive/2026-02-23-add-control-logic-math-strings/: tasks.md
openspec/changes/archive/2026-02-23-add-control-logic-math-strings/specs/arithmetic-commands/: spec.md
openspec/changes/archive/2026-02-23-add-expression-eval/: design.md  tasks.md
openspec/changes/archive/2026-03-31-add-directory-navigation/: proposal.md  tasks.md
openspec/changes/archive/2026-03-31-add-lists-and-matrices/: proposal.md
openspec/changes/archive/2026-03-31-add-modes-flags-history/: design.md  proposal.md
openspec/changes/archive/2026-03-31-add-symbolic-manipulation/: design.md  proposal.md  tasks.md
openspec/specs/arithmetic-commands/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/c-api/: spec.md
openspec/specs/cli-repl/: spec.md
openspec/specs/comparison-commands/: spec.md
openspec/specs/context-engine/: spec.md
openspec/specs/control-flow/: spec.md
openspec/specs/display-settings/: spec.md
openspec/specs/filesystem-commands/: spec.md
openspec/specs/list-commands/: spec.md
openspec/specs/logic-bitwise/: spec.md
openspec/specs/matrix-commands/: spec.md
openspec/specs/object-types/: spec.md
openspec/specs/parser/: spec.md
openspec/specs/program-execution/: spec.md
openspec/specs/sqlite-store/: spec.md
openspec/specs/stack-commands/: spec.md
openspec/specs/string-commands/: spec.md
openspec/specs/symbolic-manipulation/: spec.md
openspec/specs/transcendental-commands/: spec.md
openspec/specs/type-conversion-commands/: spec.md
src/: lpr_api.cpp
src/cas/: bridge.hpp  symengine_bridge.cpp  symengine_bridge.hpp
src/core/: commands.cpp  commands.hpp  context.cpp  context.hpp  expression.cpp  expression.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  store.cpp  store.hpp
tests/: test_arithmetic.cpp  test_arrow.cpp  test_cas.cpp  test_control_flow.cpp  test_display_flags_history.cpp  test_expression.cpp  test_filesystem.cpp  test_list_matrix.cpp  test_locals.cpp  test_logic_bitwise.cpp  test_parser.cpp  test_programs.cpp  test_stack.cpp  test_strings.cpp  test_symbolic.cpp  test_transcendental.cpp  test_types.cpp  test_undo.cpp
(+9 files in other folders)
